<resources>
    <string name="app_name">SIPS</string>
    <string name="full_app_name">Sports Injury Prevention Screening</string>
    <string name="select_main_menu">Select your test:   </string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit</string>
    <string name="action_change_test">Go To Another Test</string>
    <string name="test1_main_menu">One Leg Squat Hold</string>
    <string name="test2_main_menu">One Leg Jump Balance</string>
    <string name="test3_main_menu">Experimental</string>
    <string name="exercise1">One Leg Squat Hold</string>
    <string name="exercise2">One Leg Jump Balance</string>
    <string name="start_testing_menu">START</string>
    <string name="reset_testing_menu">RESET</string>
    <string name="testing_timer">00:00</string>
    <string name="title_testing_activity">SIPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_view_test_results">Would you like to view the test results?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_upload_exercise_data">Was the test successful?</string>
    <string name="dialog_upload">Upload</string>
    <string name="dialog_discard">Discard</string>
    <string name="title_activity_ibmdata_test">IBMDataTest</string>
    <string name="none_found">No devices found</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_sport_injury_form">Sport Injury Form</string>
    <string name="submit_text">Submit</string>
    <string name="nextbtn_text">Next</string>
    <string name="title_activity_registration_form">Registration</string>
    <string name="drawer_open">Open Drawer Navigation</string>
    <string name="close_drawer">Close Drawer Navigation</string>
</resources>