<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".TestingActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_change_test"
        android:title="@string/action_change_test"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_exercise"
        android:title="Pending"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/logout"
        android:title="@string/action_logout"
        android:orderInCategory="400"
        app:showAsAction="never" />
</menu>