<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    style="@style/AppTheme"
    android:background="#d6155d15"
    android:clickable="false"
    android:textAlignment="gravity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:id="@+id/imageView" />

    <TextView android:text="@string/select_main_menu" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:textSize="32dp"
        android:textColor="#d3000000"
        android:typeface="sans"
        android:visibility="visible"
        android:textStyle="bold"
        android:foreground="@color/abc_search_url_text_normal"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignEnd="@+id/Button1" />

    <Button
        android:paddingTop="6dp"
        android:layout_width="400dip"
        android:layout_height="36dip"
        android:textSize="24sp"
        android:text="@string/test1_main_menu"
        android:id="@+id/Button1"
        android:gravity="center"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:foregroundGravity="center"
        android:background="#ddb9a826"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/text"
        android:layout_alignParentEnd="true" />
    <Button
        android:paddingTop="6dp"
        android:layout_width="450dip"
        android:layout_height="36dip"
        android:textSize="24sp"
        android:text="@string/test2_main_menu"
        android:id="@+id/Button2"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:background="#ddb9a826"
        android:layout_below="@+id/Button1"
        android:layout_alignStart="@+id/Button1"
        android:layout_marginTop="33dp"
        android:layout_alignEnd="@+id/Button1" />
</RelativeLayout>
