<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/AppTheme"
    android:background="@color/background_color_main"

    android:clickable="false"
    android:textAlignment="gravity"
    android:paddingTop="50dp"
    android:padding="25dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:paddingRight="10dp"
        android:id="@+id/imageView"
        />

    <TextView android:text="@string/select_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:textSize="32sp"
        android:textColor="#d3000000"
        android:typeface="sans"
        android:visibility="visible"
        android:textStyle="bold"
        android:background="#d64177a5"
        android:textAlignment="center"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignRight="@+id/MainMenuButton1"
        android:layout_alignEnd="@+id/MainMenuButton1"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:gravity="center_vertical" />

    <Button
        android:paddingTop="6dp"
        android:layout_width="400dip"
        android:layout_height="36dip"
        android:textSize="24sp"
        android:text="@string/test1_main_menu"
        android:id="@+id/MainMenuButton1"
        android:gravity="center"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:foregroundGravity="center"
        android:background="#ddb9a826"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/text"
        android:textColor="@color/text_color" />

    <Button
        android:paddingTop="6dp"
        android:layout_width="450dip"
        android:layout_height="36dip"
        android:textSize="24sp"
        android:text="@string/test2_main_menu"
        android:id="@+id/MainMenuButton2"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:background="#ddb9a826"
        android:layout_below="@+id/MainMenuButton1"
        android:layout_alignStart="@+id/MainMenuButton1"
        android:layout_alignLeft="@+id/MainMenuButton1"
        android:layout_marginTop="33dp"
        android:layout_alignEnd="@+id/MainMenuButton1"
        android:layout_alignRight="@+id/MainMenuButton1"
        android:textColor="@color/text_color"
        />

    <Button
        android:paddingTop="6dp"
        android:layout_width="450dip"
        android:layout_height="36dip"
        android:textSize="24sp"
        android:text="FLANKER"
        android:id="@+id/MainMenuButton3"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:background="#ddb9a826"
        android:layout_below="@+id/MainMenuButton2"
        android:layout_alignStart="@+id/MainMenuButton2"
        android:layout_alignLeft="@+id/MainMenuButton2"
        android:layout_marginTop="33dp"
        android:layout_alignEnd="@+id/MainMenuButton2"
        android:layout_alignRight="@+id/MainMenuButton2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:paddingTop="6dp"
        android:layout_width="450dip"
        android:layout_height="36dip"
        android:textSize="24sp"
        android:text="Bluetooth"
        android:id="@+id/MainMenuButton4"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:background="#ddb9a826"
        android:layout_below="@+id/MainMenuButton3"
        android:layout_alignStart="@+id/MainMenuButton3"
        android:layout_alignLeft="@+id/MainMenuButton3"
        android:layout_marginTop="33dp"
        android:layout_alignEnd="@+id/MainMenuButton3"
        android:layout_alignRight="@+id/MainMenuButton3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:paddingTop="6dp"
        android:layout_width="450dip"
        android:layout_height="36dip"
        android:textSize="24sp"
        android:text="Sports Injury Form"
        android:id="@+id/MainMenuButton5"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:background="#ddb9a826"
        android:layout_below="@+id/MainMenuButton4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />
</RelativeLayout>
    </ScrollView>